syntax = "proto3";

package follower;

option go_package = "followers-management/followers/proto/follower";

service FollowersService{
    rpc GetProfile(UserIdRequset) returns(PersonResponse){}
    rpc GetFollowers(UserIdRequset) returns(FollowersResponse){}
    rpc GetRecommended(UserIdRequset) returns(FollowersResponse){}
    rpc GetFollowing(UserIdRequset) returns(FollowersResponse){}
    rpc IsFollowing(TwoUserIdRequest) returns(StatusCodeResponse){}
    rpc Follow(TwoUserIdRequest) returns(StatusCodeResponse){}
    rpc Unfollow(TwoUserIdRequest) returns(StatusCodeResponse){}
}

message Follower{
	int64 UserId = 1;
	string Name = 2;
	string Surname = 3;
	string Quote = 4;
	string Email = 5;
}

message StatusCodeResponse{
    int64 StatusCode = 1;
    string message = 2;
}

message FollowersResponse{
    repeated Follower Followers = 1;
}

message PersonResponse{
    string Id = 1;
    string UserId = 2;
    string Name = 3;
    string Surname = 4;
    string Picture = 5;
    string Bio = 6;
    string Quote = 7;
    string Email = 8;
}

message UserIdRequset{
    int64 UserId = 1;
}

message TwoUserIdRequest{
    int64 UserId1 = 1;
    int64 UserId2 = 2;
}